# cinecli-ru

./: .gitignore  README.md  README_RU.md  magnets.py  pyproject.toml  ui.py
cinecli/: api.py  cli.py  config.py
cinecli_ru/: api.py  cli.py  config.py  magnets.py
