[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cinecli-ru"
version = "0.1.0"
description = "Command-line tool for searching and streaming movies from Rutracker to mpv"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ollxel", email = "01bulba1337@gmail.com"}
]
keywords = [
    "rutracker",
    "torrent",
    "streaming",
    "mpv",
    "cinema",
    "movies",
    "cli"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Russian",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Internet",
    "Topic :: Utilities",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "rutracker-api>=1.0.0",
    "beautifulsoup4>=4.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ollxel/cinecli-ru"
Repository = "https://github.com/ollxel/cinecli-ru.git"
Issues = "https://github.com/ollxel/cinecli-ru/issues"
Documentation = "https://github.com/ollxel/cinecli-ru/blob/main/README.md"
Changelog = "https://github.com/ollxel/cinecli-ru/releases"

[project.scripts]
cinecli-ru = "cinecli.cli:app"

[tool.setuptools]
packages = ["cinecli"]

[tool.setuptools.package-data]
cinecli = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --strict-markers"
testpaths = ["tests"]
